2008-07-24  Tor Lillqvist  <tml@novell.com>

	* configure.in: Must output the GLIB_USING_SYSTEM_PRINTF to
	glibconfig.h using the same two phase code as for the other
	defines in it. Can't check enable_included_printf directly in the
	shell code that is the first argument to AC_CONFIG_COMMANDS().

	Preset glib_cv_stack_grows=no on Windows to help
	cross-compilation.

	* configure.in: Enhancements for 64-bit Windows: 

	Handle also size_t being larger than long. It is long long
	a.k.a. __int64 on the LLP64 Win64.

	Set glib_void_p and glib_long correctly. Their assignments were
	crossed. It hasn't mattered on LP64 platforms like all (?) 64-bit
	UNIXes, but on the LLP Win64 it was wrong.

	* glibconfig.h.win32.in: Check also _WIN64.

2008-07-24  Tor Lillqvist  <tml@novell.com>

	* glibconfig.h.win32.in: Patch for 64-bit Windows from Richard
	Hult.

2008-07-23  Matthias Clasen  <mclasen@redhat.com>

	544088 – option_test_LDADD is left in tests/Makefile.am

	* tests/Makefile.am: Remove leftovers. 
	Noticed by Hiroyuki Ikezoe

2008-07-22  Mathias Hasselmann  <mathias@openismus.com>

	Set LANG variable for group caption tests to get reproducable results.

	* glib/tests/option-context.c (group_captions()):
	  Set LANG variable to C in the forked process to get reproducable.
	  Don't silence the forked process in --verbose mode to support
	  debugging.

2008-07-21  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Fix detection of struct statfs fields.

2008-07-21  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2008-07-21  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.4 ===

	* configure.in: Bump version

	* NEWS: Updates

2008-07-21  Emmanuele Bassi  <ebassi@gnome.org>

	* glib/gtimer.c (g_time_val_to_iso8601): Use the right format
	string to get leading zeros when converting to ISO 8601. (Sven
	Herzberg)

2008-07-21  Emmanuele Bassi  <ebassi@gnome.org>

	* glib/gbookmarkfile.c: